# tz-forge

./: .gitignore  .tz-forge.yaml  README.md  catalog.yaml  pyproject.toml
cli/: tz_new.py
docs/: ASSISTANT_PROFILES.md
docs/compose/: README.md  cabal-devmelopner.md
modules/agents/: model-policy.md
modules/agents/agents-md-fractal/: AGENTS.md.tmpl
modules/agents/agents-md-lite/: AGENTS.md.tmpl
modules/agents/cabal-profile/: README.md
modules/agents/claude-md-lite/: CLAUDE.md.tmpl
modules/agents/harness-min/: COMPOSE.md  README.md
modules/agents/kickoffs/: README.md
modules/agents/security-mcp-opt/: COMPOSE.md  README.md
modules/devcontainer/python-uv/: devcontainer.json
modules/devcontainer/rust/: devcontainer.json
modules/fleet/scripts/: fleet-badge-block.md
modules/gha/gitleaks-config/: .gitleaks.toml
modules/git/: gitignore-ml  gitignore-python  gitignore-rust
modules/license/mit/: REUSE.toml
modules/local-ci/python/: check.sh
modules/local-ci/rust/: check.sh
modules/pre-commit/: .pre-commit-config.yaml
modules/rust/cargo-deny/: deny.toml
modules/skeletons/agent-swarm/: README.skeleton.md  compose.yaml.tmpl
modules/skeletons/hybrid-rust-python/: Cargo.toml.tmpl  pyproject.toml.tmpl
modules/skeletons/infra-ops/: README.skeleton.md
modules/skeletons/mcp-rust/: Cargo.toml.tmpl
project-kinds/: agent-swarm.yaml  hybrid-rust-python.yaml  infra-ops.yaml  mcp-rust.yaml  ml-python-hf.yaml  ml-rust-crate.yaml  python-lib.yaml  python-mcp.yaml  rust-cli.yaml  rust-lib.yaml
templates/: README.md
(+31 files in other folders)
