[project]
name = "tz-forge"
version = "0.1.0"
description = "Composable dev-tooling modules + tz-new project scaffolder"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tyler Zervas" }]
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0",
]

[project.scripts]
tz-new = "tz_new:main"

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["tz_new"]

[tool.setuptools.package-dir]
"" = "cli"
